Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-101948

QWaylandWindow::doApplyConfigure called from the wrong thread

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P1: Critical
    • 6.6
    • 5.15.2, 6.3.0 Beta3
    • QPA: Wayland
    • None

    Description

      QWaylandWindow::setCanResize is called from the main thread and the render thread.

       

      It then may call doApplyConfigure. doApplyConfigure uses mShellSurface which resides exclusively in the main thread.

      It's not a trivial fix. A simple QMetaObject::invokeMethod won't suffice as potentially mCanResize could be true again by the time that gets handled in the main thread we don't want the event to get lost.

      It's not just a hypothetical anymore as mentioned last meeting as we have a clear bug report downstream: https://bugs.kde.org/show_bug.cgi?id=450922

       

      Attachments

        For Gerrit Dashboard: QTBUG-101948
        # Subject Branch Project Status CR V

        Activity

          People

            tvete Paul Olav Tvete
            davidedmundson David Edmundson
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes