src/client/qwaylandwindow_p.h
@@ -321,6 +321,9 @@ protected:
     QPointer<QWaylandWindow> mTransientParent;
     QList<QPointer<QWaylandWindow>> mChildPopups;
 
+private slots:
+    void doApplyConfigureFromOtherThread();
+
 private:
     void setGeometry_helper(const QRect &rect);
     void initWindow();
